added some section and the einführungsbereich und co

--- a/_DaBa.tex
+++ b/_DaBa.tex
@@ -29,20 +29,20 @@
 \nummer{XXXXXXXXXX-A}   % XX...X = Stud-ID, z.B. 0310238045-A  
                         % (A = 1. Bachelorarbeit)
 \semester{Wintersemester 2016/17} 
-\gegenstand{Einführung in die Tiefere Problematik 1} 
+\gegenstand{………………}%Einführung in die Tiefere Problematik 1} 
 \betreuer{Stephan Dreiseitl, FH-Prof. PD DI Dr.} % oder \betreuerin{..}
 
 %%% zusätzlich für einen Praktikumsbericht: -----------------
-\nummer{XXXXXXXXXX-B}   % XX...X = Stud-ID, z.B. 0310238045-B  
+%\nummer{XXXXXXXXXX-B}   % XX...X = Stud-ID, z.B. 0310238045-B  
                         % (B = 2. Bachelorarbeit)
-\betreuer{Mag.~Pjotr I.~Czar\\Creative Director}  % \betreuerin{..}
-\firma{%
-   Oligarchic Media International GmbH\\
-   Online Division\\
-   1020 Wien, Hubertusgasse 3a
-}
-\firmenTel{1-234-5678-100}
-\firmenUrl{www.mogul.at}
+%\betreuer{Mag.~Pjotr I.~Czar\\Creative Director}  % \betreuerin{..}
+%\firma{%
+%   Oligarchic Media International GmbH\\
+%   Online Division\\
+%   1020 Wien, Hubertusgasse 3a
+%}
+%\firmenTel{1-234-5678-100}
+%\firmenUrl{www.mogul.at}
 
 %\strictlicense  % erzeugt restriktive Lizenzformel
 
@@ -52,9 +52,9 @@
 \tableofcontents
 %%%----------------------------------------------------------
 
-%\include{vorwort}		% ggfs. weglassen
-%\include{kurzfassung}
-%\include{abstract}
+\include{vorwort}		% ggfs. weglassen
+\include{kurzfassung}
+\include{abstract}
 
 %%%----------------------------------------------------------
 \mainmatter         % Hauptteil (ab hier arab. Seitenzahlen)
