--- a/keyPointDetection.tex
+++ b/keyPointDetection.tex
@@ -7,7 +7,7 @@
 
 \subsection{Daten vorbereiten und normalisieren}
 
-\subsection{Evaluation- und Error-Funktion}
+\subsection{Evaluation- und Errorfunktion}
 
 \section{Neuronale Ebenen vorbereiten}
 
