--- a/kurzfassung.tex
+++ b/kurzfassung.tex
@@ -1,30 +1,30 @@
 
 \chapter{Kurzfassung}
 
-Maschinelles lernen und tiefe neuronale Netze werden unter anderem in 
-unserem Jahrzehnt sehr häufig eingesetzt um technische Problemstellungen 
-zu lösen, für des eine in vernünftiger Zeit keine Brauchbaren 
-iterative Algorithmen gibt. Zusätzlich werden maschinell 
-lernende System immer häufiger in unserem allgemeinen Alttag 
-eingesetzt um uns zu unterstützen und um von den Benützern zu lernen.
-Ein neuronales Netzwerk kann aber nicht einfach erstellt werden
-und im nächsten Schritt in der Praxis eingesetzt werden. Dies würde 
-zu erheblichen Problemen führen. Diese Netzwerke müssen trainiert werden
-sowie getestet. 
+%Maschinelles lernen und tiefe neuronale Netze werden unter anderem in 
+%unserem Jahrzehnt sehr häufig eingesetzt um technische Problemstellungen 
+%zu lösen, für des eine in vernünftiger Zeit keine Brauchbaren 
+%iterative Algorithmen gibt. Zusätzlich werden maschinell 
+%lernende System immer häufiger in unserem allgemeinen Alttag 
+%eingesetzt um uns zu unterstützen und um von den Benützern zu lernen.
+%Ein neuronales Netzwerk kann aber nicht einfach erstellt werden
+%und im nächsten Schritt in der Praxis eingesetzt werden. Dies würde 
+%zu erheblichen Problemen führen. Diese Netzwerke müssen trainiert werden
+%sowie getestet. 
 
 
-Im Rahmen dieser Bachelorarbeit werden die wichtigsten theoretischen Konzepte zu 
-maschinellem lernen und tiefe neuronale Netze theoretisch zu vergleichen und empirisch zu überprüfen. 
-Dazu wird das TensorFlow-Bibliothek als Beispiel verwendet und analysiert. Aus dieser Bibliothek werden 
-die benötigten Teile heraus genommen und in einem Python-Script zusammen gefügt um in Bildern mit Gesichtern 
-gewisse Züge zu erkennen und zu Klassifizieren. Durch die Analysephasen werden theoretische und berechnete Annahmen 
-untermauert oder in Frage gestellt. Folgende Schlussfolgerungen gehen jedoch nach Auswertung 
-der Ergebnisse über die theoretischen Annahmen hinaus: Ist das TensorFlow-System 
-in der Lage, Muster aus unterschiedlichen Datentypen, wie zum Beispiel Bilder, 
-Videos oder Videostreams, zu erkennen und von diesen selbst zu lernen?
+%Im Rahmen dieser Bachelorarbeit werden die wichtigsten theoretischen Konzepte zu 
+%maschinellem lernen und tiefe neuronale Netze theoretisch zu vergleichen und empirisch zu überprüfen. 
+%Dazu wird das TensorFlow-Bibliothek als Beispiel verwendet und analysiert. Aus dieser Bibliothek werden 
+%die benötigten Teile heraus genommen und in einem Python-Script zusammen gefügt um in Bildern mit Gesichtern 
+%gewisse Züge zu erkennen und zu Klassifizieren. Durch die Analysephasen werden theoretische und berechnete Annahmen 
+%untermauert oder in Frage gestellt. Folgende Schlussfolgerungen gehen jedoch nach Auswertung 
+%der Ergebnisse über die theoretischen Annahmen hinaus: Ist das TensorFlow-System 
+%in der Lage, Muster aus unterschiedlichen Datentypen, wie zum Beispiel Bilder, 
+%Videos oder Videostreams, zu erkennen und von diesen selbst zu lernen?
 
-Die Bachelorarbeit ist sowohl für Studierende im Studium Software Engineering sowie 
-Informatik als auch für Lehrende in diesen Bereichen interessant.
+%Die Bachelorarbeit ist sowohl für Studierende im Studium Software Engineering sowie 
+%Informatik als auch für Lehrende in diesen Bereichen interessant.
 
 
 
